# processor-interview

./: .env  .env.example  .env.sample  .gitignore  Dockerfile  Main.java  Program.cs  README.md  TransactionProcessor.cs  TransactionRecord.cs  TransactionType.cs  \  app.js  biome.json  compose.yml  docker-compose.yml  index.html  jest.config.js  jest.config.ts  nodemon.json  package-lock.json  package.json  postcss.config.cjs  processor-interview.sln  remix.config.js  signapay.sln  test.csv  tsconfig.json  vite.config.ts
DataReader/: DataReader.sln
Design/: DB_Tables.xlsx  Transaction_processor_architecture.drawio
RecordParsing/: Format1TransactionRecordParser.cs  ITransactionRecordParser.cs
Repository/: ITransactionRepository.cs  InMemoryTransactionRepository.cs
SignaPayProcessor/: Program.cs  SignaPayProcessor.csproj  TransactionContext-84a08600-d4b3-4a8f-a374-f054d98e9382.db  appsettings.json
app/: layout.tsx  page.tsx  root.tsx
backend/: .env  .envrc.example  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  server.js  serverless.yml  tsconfig.json
client/: .env.docker  AppLayout.module.css  AppLayout.tsx  Dockerfile  Router.tsx  entry-client.tsx  entry-server.tsx  package-lock.json  package.json  style.css  tsconfig.json
components/: account-chart.tsx  accounts.tsx  bad-transactions.tsx  clear-store.tsx  collections.tsx  header.tsx  upload-file.tsx
config/: config.ts
controllers/: transactionController.js
data/: test_bad.csv
docker/: docker-compose.yml
flask_server/: app.py  pyproject.toml  wsgi.py
frontend/: .env  (+8 more)
(+535 files in other folders)
