[tool.poetry]
name = "flask_server"
version = "0.1.0"
description = ""
authors = ["Pranav Sharma <pranavsharma3327@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flasgger = "^0.9.7.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pandas = "^2.2.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
